--- a/WebContent/deskapp2-master/ionicons.html
+++ b/WebContent/deskapp2-master/ionicons.html
@@ -920,7 +920,7 @@
 						<li class="fa-hover" data-toggle="tooltip" data-placement="bottom" title="Click To Copy Code"><a href="javascript:;"><i class="icon-copy ion-ios-game-controller-b"></i></a></li>
 						<li class="fa-hover" data-toggle="tooltip" data-placement="bottom" title="Click To Copy Code"><a href="javascript:;"><i class="icon-copy ion-ios-game-controller-b-outline"></i></a></li>
 						<li class="fa-hover" data-toggle="tooltip" data-placement="bottom" title="Click To Copy Code"><a href="javascript:;"><i class="icon-copy ion-ios-americanfootball"></i></a></li>
-						<li class="fa-hover" data-toggle="tooltip" data-placement="bottom" title="Click To Copy Code"><a href="javascript:;"><i class="icon-copy ion-ios-americanfootball-outline"</a>></i></li>
+						<li class="fa-hover" data-toggle="tooltip" data-placement="bottom" title="Click To Copy Code"><a href="javascript:;"><i class="icon-copy ion-ios-americanfootball-outline"></i></a>></i></li>
 						<li class="fa-hover" data-toggle="tooltip" data-placement="bottom" title="Click To Copy Code"><a href="javascript:;"><i class="icon-copy ion-ios-baseball"></i></a></li>
 						<li class="fa-hover" data-toggle="tooltip" data-placement="bottom" title="Click To Copy Code"><a href="javascript:;"><i class="icon-copy ion-ios-baseball-outline"></i></a></li>
 						<li class="fa-hover" data-toggle="tooltip" data-placement="bottom" title="Click To Copy Code"><a href="javascript:;"><i class="icon-copy ion-ios-basketball"></i></a></li>
