--- a/WebContent/homepage/index.html
+++ b/WebContent/homepage/index.html
@@ -59,9 +59,9 @@
 
         <h1 class="my-4">Shop Name</h1>
         <div class="list-group">
-          <a href="#" class="list-group-item">Category 1</a>
-          <a href="#" class="list-group-item">Category 2</a>
-          <a href="#" class="list-group-item">Category 3</a>
+          <a href="#" class="list-group-item">기본 필터</a>
+          <a href="#" class="list-group-item">맞춤 필터</a>
+          <a href="#" class="list-group-item">가격 예측</a>
         </div>
 
       </div>
