--- a/WebContent/homepage/index.html
+++ b/WebContent/homepage/index.html
@@ -32,18 +32,18 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="#">메인
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Join</a>
+            <a class="nav-link" href="#">회원가입</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="#">로그인</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Mypage</a>
+            <a class="nav-link" href="#">마이페이지</a>
           </li>
         </ul>
       </div>
@@ -75,7 +75,7 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+              <img class="d-block img-fluid" src="../white-img.jpg" alt="First slide">
             </div>
             
           </div>
