--- a/WebContent/homepage/index.html
+++ b/WebContent/homepage/index.html
@@ -57,7 +57,7 @@
 
       <div class="col-lg-3">
 
-        <h1 class="my-4">Shop Name</h1>
+        <h1 class="my-4">필터</h1>
         <div class="list-group">
           <a href="#" class="list-group-item">기본 필터</a>
           <a href="#" class="list-group-item">맞춤 필터</a>
@@ -74,8 +74,8 @@
            
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <img class="d-block img-fluid" src="../white-img.jpg" alt="First slide">
+            <div class="carousel-item active">찾으시는 매물을 검색하세요.
+              <!--  <img class="d-block img-fluid" src="./img/white-img.jpg" alt="First slide"> 이미지 파일 넣는 곳-->
             </div>
             
           </div>
