--- a/WebContent/homepage/index.html
+++ b/WebContent/homepage/index.html
@@ -37,13 +37,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">회원가입</a>
+            <a class="nav-link" href="join">회원가입</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">로그인</a>
+            <a class="nav-link" href="login.html">로그인</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">마이페이지</a>
+            <a class="nav-link" href="mypage">마이페이지</a>
           </li>
         </ul>
       </div>
