--- a/WebContent/homepage/login.html
+++ b/WebContent/homepage/login.html
@@ -8,5 +8,11 @@
 
 <h1>팝업으로 띄우고싶다</h1>
 
+<div>
+	ID : <input type = "text" name = "id"><br>
+	PW : <input type = "text" name = "pw"><br>
+	<input type = "submit" value = "로그인"><br>
+</div>
+
 </body>
 </html>
