--- a/WebContent/homepage/index.html
+++ b/WebContent/homepage/index.html
@@ -36,11 +36,12 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
+       
           <li class="nav-item">
             <a class="nav-link" href="join">회원가입</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login">로그인</a>
+            <a class="nav-link" href="login.html">로그인</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="mypage">마이페이지</a>
