--- a/WebContent/homepage/index.html
+++ b/WebContent/homepage/index.html
@@ -42,13 +42,13 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="join.html">회원가입</a>
+            <a class="nav-link" href="join.jsp">회원가입</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="login.jsp">로그인</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="mypage.html">마이페이지</a>
+            <a class="nav-link" href="mypage.jsp">마이페이지</a>
           </li>
         </ul>
       </div>
