--- a/WebContent/homepage/join.html
+++ b/WebContent/homepage/join.html
@@ -96,7 +96,7 @@ body{
 					<div class="card">
 						<div class="card-header">회원가입</div>
 						<div class="card-body">
-							<form name="my-form" onsubmit="return validform()" action="JoinServiceCon.do" method="post">
+							<form name="my-form" onsubmit="return validform()" action="JoinService.do" method="post">
 								<div class="form-group row">
 									<label for="full_name"
 										class="col-md-4 col-form-label text-md-right">아이디</label>
