--- a/WebContent/homepage/login.html
+++ b/WebContent/homepage/login.html
@@ -96,7 +96,7 @@
 					<div class="card">
 						<div class="card-header">로그인</div>
 						<div class="card-body">
-							<form name="my-form" onsubmit="return validform()" action="LoginService.do" method="post"> <!--action 어디로이동?  -->
+							<form name="my-form" onsubmit="return validform()" action="LoginService.do" method="post"> 
 								<div class="form-group row">
 									<label for="full_name"
 										class="col-md-4 col-form-label text-md-right">아이디</label>
